...
    confirmButtonText: String,
    cancelButtonText: String,
    onConfirm: () -> Unit,
    onDismissRequest: () -> Unit
) {
    AlertDialog(
        modifier = Modifier.testTag("confirmationDialog"),
        onDismissRequest = { onDismissRequest() },
        title = {
            Text(text = title)
        },
        text = {
            Text(text = message)
...
