...
        },
        properties =
        DialogProperties(
            dismissOnBackPress = true,
            dismissOnClickOutside = true
        ),
        modifier = Modifier.testTag("addExerciseDialog")
    ) {
        Card {
            Column(
                modifier =
                Modifier
                    .padding(16.dp)
...
